# gooroom-security-status-tools-test

./: Makefile.am  README  autogen.sh  configure.ac
common/: Makefile.am  common.c  common.h  gooroom-systemd-control-helper.c
data/: Makefile.am  gooroom-client-server-register-wrapper  gooroom-ip6tables-wrapper  gooroom-iptables-wrapper  gooroom-logparser-seektime-helper  gooroom-product-uuid-helper  gooroom-security-logparser-wrapper  gooroom-security-status-vulnerable-helper  gooroom-update-checker  kr.gooroom.security.status.tools.policy.in.in
debian/: changelog  control  copyright  gooroom-security-status-tools.install  rules
help/ko/gooroom-settings/: client-server-register.html  index.html  info.html  start.html
help/ko/gooroom-sysinfo/: index.html  log.html  policy.html  security.html  start.html
po/: POTFILES.in  POTFILES.skip  en_GB.po  ko.po
src/: Makefile.am
src/settings/: Makefile.am  gooroom-security-status-settings.desktop.in  gresource.xml  main.c  settings-window.c  settings-window.h  settings-window.ui
src/sysinfo/: Makefile.am  apps.gooroom-security-status-view.gschema.xml  calendar-popover.c  calendar-popover.h  gooroom-security-status-view.desktop.in  gresource.xml  logfilter-popover.c  logfilter-popover.h  logfilter-popover.ui  main.c  rpd-dialog.c  rpd-dialog.h  rpd-dialog.ui  sysinfo-window.c  sysinfo-window.h  sysinfo-window.ui
